# SmartDB

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  db_config.json
.github/workflows/: ci.yml  release.yml
src/: CMakeLists.txt  main.cpp
src/sdb/: connection_pool.hpp  db.hpp  idb.hpp  logging.hpp  query_utils.hpp  types.hpp
src/sdb/drivers/: mysql_driver.hpp  sqlite_driver.hpp
src/smartdb/: support.cpp  support.hpp
tests/: main_test.cpp
